fix dialog double scroll

--- a/packages/webawesome/docs/assets/styles/docs.css
+++ b/packages/webawesome/docs/assets/styles/docs.css
@@ -252,6 +252,8 @@ wa-button.delete {
   padding-bottom: 1rem;
 }
 
+
+wa-page::part(drawer__dialog),
 wa-page::part(menu) {
   overflow: unset;
 }
